[fix] Resolve language dropdown alignement

--- a/themes/unitexgramlab/css/language-dropdown.css
+++ b/themes/unitexgramlab/css/language-dropdown.css
@@ -72,7 +72,7 @@
   width: 100%;
   text-align: center;
   color: #fff;
-  padding: 1em;
+  padding: 17px;
   border-radius: .15em;
   cursor: pointer;
   transition: all 0.35s ease;
